# ksp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MAINTAINERS.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.1.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.yml  install.ps1  install.sh  ksp.toml  uninstall.ps1  uninstall.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  labeler.yml  release.yml  security.yml  stale.yml
crates/ksp-cli/: Cargo.toml  build.rs
crates/ksp-cli/src/: config.rs  main.rs  ui.rs
crates/ksp-cli/src/cmd/: benchmark.rs  capture.rs  cert.rs  chat.rs  completion.rs  config_cmd.rs  connect.rs  daemon.rs  dashboard.rs  demo.rs  diag.rs  dist.rs  docs.rs  doctor.rs  easter_eggs.rs  env.rs  explain.rs  generate.rs  info.rs  init.rs  learn.rs  logs.rs  metrics.rs  mod.rs  new_project.rs  packet.rs  ping.rs  playground.rs  plugins.rs  profile.rs  proxy.rs  security.rs  server.rs  session.rs  shell.rs  stats.rs  stream.rs  telemetry.rs  trace.rs  transfer.rs  (+3 more)
crates/ksp-cli/src/ui/: startup.rs
crates/ksp-cli/tests/: cli_tests.rs
crates/ksp-client/: Cargo.toml
crates/ksp-client/src/: client.rs  lib.rs  main.rs
crates/ksp-core/: Cargo.toml
crates/ksp-core/src/: capability.rs  capture.rs  constants.rs  error.rs  lib.rs  packet.rs  types.rs  version.rs
crates/ksp-crypto/: Cargo.toml
crates/ksp-crypto/src/: aead.rs  certificate.rs  kdf.rs  lib.rs  nonce.rs  x25519.rs
crates/ksp-handshake/: Cargo.toml
crates/ksp-handshake/src/: auth.rs  lib.rs  messages.rs  state.rs
crates/ksp-integration-tests/: Cargo.toml
crates/ksp-integration-tests/benches/: ksp_benchmarks.rs
crates/ksp-integration-tests/src/: lib.rs
crates/ksp-integration-tests/tests/: integration_e2e.rs  integration_handshake.rs  integration_replay.rs
crates/ksp-server/: Cargo.toml
crates/ksp-server/src/: lib.rs  main.rs  server.rs
crates/ksp-transport/: Cargo.toml
crates/ksp-transport/src/: compression.rs  flow_control.rs  keepalive.rs  lib.rs  replay.rs  session.rs  stream.rs
demo-web-app/: README.md  animations.js  app.js  benchmark.js  crypto-simulator.js  index.html  ksp-simulator.js  packet-parser.js  style.css  wireshark.js
demo-web-app/assets/: placeholder.txt
docs/: benchmarks.md
examples/: README.md
examples/benchmark/: README.md
examples/chat/: README.md  chat_server.rs
examples/dashboard/: README.md
examples/gateway/: README.md
examples/proxy/: README.md
examples/transfer/: README.md
python/: README.md  pyproject.toml
python/ksp_cli/: __init__.py  main.py
spec/: RFC-0001-ksp-v1.md
wireshark-plugin/: ksp.lua
