[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ksp-cli"
version = "0.1.0"
description = "Official Python global installer and wrapper for the Kush Secure Protocol (KSP) CLI"
readme = "README.md"
authors = [
    { name = "Kush", email = "kush@kspprotocol.dev" }
]
license = { text = "MIT" }
keywords = ["ksp", "protocol", "security", "cli", "cryptography", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://www.kspprotocol.dev"
Repository = "https://github.com/kush-secure-protocol/ksp"

[project.scripts]
ksp = "ksp_cli.main:main"
