[package]
name = "ksp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KSP client library and interactive client binary"

[dependencies]
ksp-core = { workspace = true }
ksp-crypto = { workspace = true }
ksp-handshake = { workspace = true }
ksp-transport = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
