[package]
name = "ksp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cryptographic primitives for the Kush Secure Protocol: X25519 key exchange, AEAD encryption, HKDF key derivation, and Ed25519 certificates"

[dependencies]
ksp-core = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
