[package]
name = "ksp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async KSP server implementation using Tokio"

[dependencies]
ksp-core = { workspace = true }
ksp-crypto = { workspace = true }
ksp-handshake = { workspace = true }
ksp-transport = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
